--- a/abinash/bootstrap/boot.html
+++ b/abinash/bootstrap/boot.html
@@ -19,13 +19,13 @@
     <div class="container-fluid bg_color">
         <div class="container">
             <div class="row p-3 text-white">
-                <div class="col-md-6 col-sm-12 text-white  ">
-                    <div class="txt_align">
+                <div class="col-md-6 col-sm-6 col- text-centre txt_align">
+                    <div class="">
                         <i class="fa-solid fa-phone text text-white "></i>
                         +62 088 999 123
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 text-white txt_align  txt_r">
+                <div class="col-md-6 col-sm-6 col-  txt_align  txt_r">
                     <i class="fa-brands fa-facebook-f width_a"></i>
                     <i class="fa-brands fa-twitter width_a"></i>
                     <i class="fa-brands fa-linkedin-in width_a"></i>
@@ -39,7 +39,7 @@
 
     <div class="container">
         <div class="row p-3 txt_align ">
-            <div class="col-md-5 col-sm-12 text-bold ">
+            <div class="col-md-5 col-sm-12 col- text-bold ">
                 <i class="fa-sharp fa-solid fa-square text-danger font_s1"></i><i
                     class="fa-sharp fa-solid fa-square color_1 font_s1"></i>
 
@@ -53,34 +53,34 @@
                 </button>
             </div>
 
-            <div class="col-md-1 col-sm-12 p-2 ">
+            <div class="col-md-1 col-sm-12 col- p-2 txt_align">
                 <div class="margin_a font_s2">
                     features<i class="fa-solid fa-angle-down"></i>
                 </div>
             </div>
-            <div class="col-md-1 col-sm-12 p-2 ">
+            <div class="col-md-1 col-sm-12 col- p-2 txt_align">
                 <div class="margin_a font_s2">
                     pages<i class="fa-solid fa-angle-down"></i>
                 </div>
             </div>
-            <div class="col-md-1 col-sm-12 p-2 ">
+            <div class="col-md-1 col-sm-12 col- p-2 txt_align">
                 <div class="margin_a font_s2">
                     Portfolio<i class="fa-solid fa-angle-down"></i>
                 </div>
             </div>
-            <div class="col-md-1 col-sm-12 p-2 ">
+            <div class="col-md-1 col-sm-12 col- p-2 txt_align">
                 <div class="margin_a font_s2">
                     Blog <i class="fa-solid fa-angle-down"></i>
                 </div>
             </div>
-            <div class="col-md-1 col-sm-12 p-2">
+            <div class="col-md-1 col-sm-12 col- p-2">
                 <div type="button">Contact</div>
             </div>
 
         </div>
 
     </div>
-    <div class="bg_img text_align  txt_align">
+    <div class="bg_img text_align">
         <div class="padding1">
             <div class="font_s3 color_2">
                 Responsive
@@ -95,7 +95,7 @@
         <div class="container p-5 border_b">
             <div class="row txt_align">
                 <div class="col-md-1 col-sm-12 p-2 txt_align width1 margin1">
-                    <img src="img1.png" alt="star" width="70%" height="70px">
+                    <img src="img1.png" alt="star" width="70%" height="50px">
                 </div>
                 <div class="col-md-3 col-sm-12 nofloat">
                     <div class="font_s4 color_3">High
@@ -104,20 +104,20 @@
                     <div class="py-2">Lorem ipsum dolor sit amet consectetur adipisicing elit Temporibus ratione.</div>
                     <div class="bold">Learn more</div>
                 </div>
-                <div class="col-md-1 col-sm-12 p-2 txt_align width1 margin1">
-                    <img src="img2.png" alt="box" height="70px" width="70%">
+                <div class="col-md-1 col-sm-12 p-2 txt_align nofloat width1 margin1">
+                    <img src="img2.png" alt="box" height="48px" width="77%">
                 </div>
-                <div class="col-md-3 col-sm-12">
+                <div class="col-md-3 col-sm-12 nofloat">
                     <div class="font_s4 color_3">
                         Rich of <span class="text bold text-dark">Features</span>
                     </div>
                     <div class="py-2">Lorem ipsum dolor sit amet consectetur adipisicing elit Temporibus ratione.</div>
                     <div class="bold">Learn more</div>
                 </div>
-                <div class="col-md-1 col-sm-12 p-2 txt_align width1 margin1">
-                    <img src="img3.png" alt="tab" height="80px" width="80%">
+                <div class="col-md-1 col-sm-12 p-2 txt_align nofloat width1 margin1">
+                    <img src="img3.png" alt="tab" height="60px" width="100%">
                 </div>
-                <div class="col-md-3 col-sm-12">
+                <div class="col-md-3 col-sm-12 nofloat">
                     <div class="font_s4 color_3">
                         Moder <span class="text bold text-dark">Design</span>
                     </div>
@@ -140,32 +140,32 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="  col-md-3 col-sm-6 text_align  nofloat width2  ">
-                    <div class="bg_i p-4  text-white">
-                        <div class="font_s pb-4 txt_align">Very
+                <div class="col-md-3 col-sm-6  nofloat width2">
+                    <div class="bg_i p-4 ">
+                        <div class="font_s pb-4 text_align">Very
                             <span class="bold text text-white">Basic</span>
                         </div>
                     </div>
-                    <div class="p-4 bg_j text-white">
+                    <div class="p-4 text_align bg_j text-white">
                         $15.00/Month
                     </div>
-                    <div class="p-3 border ">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i>
                         100 applications
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> 24x7 support available
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> No hidden fees
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> free 30-days trial
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> stop anytime easily
                     </div>
-                    <div class="p-4 bg_k ">
+                    <div class="p-4 bg_k text_align">
                         <div class="txt_align  width3 margin1">
                             <button type="button" class="p-1 button_color border_n text text-white width_b "> <i
                                     class="fa-solid fa-angle-down bold"></i>
@@ -175,32 +175,32 @@
                     </div>
                 </div>
 
-                <div class="  col-md-3 col-sm-6 text_align  nofloat width2  ">
-                    <div class="bg_i p-4  text-white">
-                        <div class="font_s pb-4 txt_align">Simple
+                <div class="  col-md-3 col-sm-6  nofloat width2  ">
+                    <div class="bg_i p-4 ">
+                        <div class="font_s pb-4 text_align">Simple
                             <span class="bold text text-white ">Choice</span>
                         </div>
                     </div>
-                    <div class="p-4   bg_j text-white">
+                    <div class="p-4 text_align  bg_j text-white">
                         $20.00/Month
                     </div>
-                    <div class="p-3 border ">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i>
                         100 applications
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> 24x7 support available
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> No hidden fees
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> free 30-days trial
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> stop anytime easily
                     </div>
-                    <div class="p-4 bg_k  ">
+                    <div class="p-4 bg_k text_align">
                         <div class="txt_align width3 margin1">
                             <button type="button" class="p-1 button_color border_n text text-white width_b txt_align"> <i
                                     class="fa-solid fa-angle-down bold"></i>
@@ -210,32 +210,32 @@
                     </div>
                 </div>
 
-                <div class="  col-md-3 col-sm-6 text_align  nofloat width2  ">
-                    <div class="bg_l p-4  text-white">
-                        <div class="font_s pb-4 txt_align">Special
+                <div class="  col-md-3 col-sm-6  nofloat width2  ">
+                    <div class="bg_l p-4 ">
+                        <div class="font_s pb-4 text_align">Special
                             <span class="bold text text-white ">Choice</span>
                         </div>
                     </div>
-                    <div class="p-4 bg_m text-white">
+                    <div class="p-4 bg_m text-white text_align">
                         $15.00/Month
                     </div>
-                    <div class="p-3 border ">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i>
                         100 applications
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> 24x7 support available
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> No hidden fees
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> free 30-days trial
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> stop anytime easily
                     </div>
-                    <div class="p-4 bg_m1 ">
+                    <div class="p-4 bg_m1 text_align">
                         <div class="txt_align width3 margin1">
                             <button type="button" class="p-1 button_color border_n text-white width_b txt_align"> <i
                                     class="fa-solid fa-angle-down bold"></i>
@@ -245,32 +245,32 @@
                     </div>
                 </div>
 
-                <div class=" col-md-3 col-sm-6 text_align  nofloat width2 ">
-                    <div class="bg_n p-4  text-white">
-                        <div class="font_s pb-4 txt_align">Just
+                <div class=" col-md-3 col-sm-6   nofloat width2 ">
+                    <div class="bg_n p-4 ">
+                        <div class="font_s pb-4 text_align">Just
                             <span class="bold text text-white">Happy</span>
                         </div>
                     </div>
-                    <div class="p-4 bg_j text-white">
+                    <div class="p-4 bg_j text-white text_align">
                         $15.00/Month
                     </div>
-                    <div class="p-3 border ">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i>
                         100 applications
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> 24x7 support available
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> No hidden fees
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> free 30-days trial
                     </div>
-                    <div class="p-3 border">
+                    <div class="p-3 border text_align">
                         <i class="fa-solid fa-check"></i> stop anytime easily
                     </div>
-                    <div class="p-4 bg_k ">
+                    <div class="p-4 bg_k text_align">
                         <div class="txt_align width3 ">
                             <button type="button" class="p-1 button_color border_n text-white width_b txt_align"> <i
                                     class="fa-solid fa-angle-down bold"></i>
@@ -313,7 +313,7 @@
     </div>
     <div class="container-fluid pb-5">
         <div class="container pb-5">
-            <div class="row nofloat width3 txt_align">
+            <div class="row nofloat width3 ">
                 <div class="  col-md-3 col-sm-6 nofloat width4">
                     <img src="img5.jpg" alt="Image" width="100%" height="190px">
                 </div>
@@ -332,7 +332,7 @@
     <div class="container-fluid pt-3 bg_n pb-5">
         <div class="container ">
             <div class="row">
-                <div class="col-md-4 col-sm-6 text-white">
+                <div class="col-md-4 col-sm-6 text text-white ">
                     <div class="font_s6 ">Browser pages</div>
                     <div class="font_s8">
                         <div class="pt-3 pb-2">our company</div>
@@ -343,7 +343,7 @@
                         <div class="pb-2">our support forum</div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 text-white">
+                <div class="col-md-4 col-sm-6 text text-white ">
                     <div class="font_s6 ">Get in touch</div>
                     <div class="font_s8">
                         <div class="pt-3 font_s7"> Eterna company inc. </div>
@@ -359,7 +359,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 text-white">
+                <div class="col-md-4 col-sm-6 text text-white ">
                     <div class="font_s8">
                         <div class="font_s6 ">Subscribe newsletter</div>
                         <div class="pt-3">
@@ -377,7 +377,7 @@
     </div>
     <div class="container-fluid bg_p font_s8">
         <div class="container pt-4">
-            <div class="row text-white txt_align nofloat">
+            <div class="row text text-white txt_align nofloat">
                 <div class="col-md-6 col-sm-12">
                     <div>© Eterna company. All rights reserved</div>
                 </div>
