--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -13,21 +13,21 @@
   <div class="bg_color3 font_f">
     <header class="bg_color1">
       <div class="width_a margin_a">
-        <div class="float_left width_left">
+        <div class="float_left width_left nofloat1  nofloat2  nofloat3  nofloat4  nofloat5 ">
           <div>
-            <div class="float_left width_l1 padding">
-              <img src="img_g.jpeg" alt="Guitar" height="55px" width="130%">
+            <div class="float_left width_l1 padding nofloat1  nofloat2  nofloat3  nofloat4  nofloat5 img_align width1 margin1">
+              <img src="img_g.jpeg" alt="Guitar" height="55px" width="130%" class="img_prop">
             </div>
-            <div class="float_right width_r1">
-              <div class="font_size bg_color padding1">SoundAMP</div>
+            <div class="float_right width_r1 nofloat1 nofloat2  nofloat3  nofloat4  nofloat5   width1 margin1">
+              <div class="font_size bg_color padding1 width2 txt_align1 txt_align2 txt_align3 txt_align4 txt_align5 ">SoundAMP</div>
             </div>
             <div style="clear: both;"></div>
           </div>
         </div>
         <div class="">
-          <div class="float_right width_right ">
-            <div class="float_left width_l2 padding2">
-              <div class="font" style="text-align: right;">
+          <div class="float_right width_right nofloat1  nofloat2  nofloat3  nofloat4  nofloat5 txt_align ">
+            <div class="float_left width_l2 padding2 txt_align  ">
+              <div class="font " style="text-align: right;">
                 <a href class="bg_color txt">HTML Templates</a>
                 <i class="fa-solid fa-caret-down margin_r bg_color"></i>
                 <a href class="bg_color txt">More HTML Templates</a>
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class=" width_b  margin_a">
-        <div class="float_left width_l3 margin_r3">
+        <div class="float_left width_l3 margin_r3 nofloat">
           <div class="margin border bg_color2">
             <img src="img_1.jpeg" alt="night laser" height="200px" width="100%">
             <div class="width_c margin_a padding5  ">
@@ -75,7 +75,7 @@
             </div>
           </div>
         </div>
-        <div class="float_left width_l3 margin_r3">
+        <div class="float_left width_l3 margin_r3 nofloat">
           <div class="margin border bg_color2">
             <img src="img_2.jpeg" alt="live music" height="200px" width="100%">
             <div class="width_c margin_a padding5 ">
@@ -87,7 +87,7 @@
             </div>
           </div>
         </div>
-        <div class="float_left width_l3 margin_r3">
+        <div class="float_left width_l3 margin_r3 nofloat">
           <div class="margin border bg_color2">
             <img src="img_3.jpeg" alt="Master class" height="200px" width="100%">
             <div class="width_c margin_a padding5 ">
@@ -100,7 +100,7 @@
             </div>
           </div>
         </div>
-        <div class="float_right width_l3">
+        <div class="float_right width_l3 nofloat">
           <div class=" margin border bg_color2">
             <img src="img_4.jpeg" alt="night party" height="200px" width="100%">
             <div class="width_c margin_a padding5">
