--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -13,36 +13,36 @@
   <div class="bg_color3 font_f">
     <header class="bg_color1">
       <div class="width_a margin_a">
-        <div class="float_left width_left nofloat1  nofloat2  nofloat3  nofloat4  nofloat5 ">
+        <div class="float_left width_left nofloat">
           <div>
-            <div class="float_left width_l1 padding nofloat1  nofloat2  nofloat3  nofloat4  nofloat5 img_align width1 margin1">
+            <div class="float_left width_l1 padding nofloat img_align">
               <img src="img_g.jpeg" alt="Guitar" height="55px" width="130%" class="img_prop">
             </div>
-            <div class="float_right width_r1 nofloat1 nofloat2  nofloat3  nofloat4  nofloat5   width1 margin1">
-              <div class="font_size bg_color padding1 width2 txt_align1 txt_align2 txt_align3 txt_align4 txt_align5 ">SoundAMP</div>
+            <div class="float_right width_r1 nofloat txt_align">
+              <div class="font_size bg_color padding1 txt_align  ">SoundAMP</div>
             </div>
             <div style="clear: both;"></div>
           </div>
         </div>
         <div class="">
-          <div class="float_right width_right nofloat1  nofloat2  nofloat3  nofloat4  nofloat5 txt_align ">
-            <div class="float_left width_l2 padding2 txt_align  ">
-              <div class="font " style="text-align: right;">
-                <a href class="bg_color txt">HTML Templates</a>
+          <div class="float_right width_right nofloat">
+            <div class="float_left width_l2 padding2 nofloat txt_align ">
+              <div class="font" style="text-align: right;">
+                <a href class="bg_color txt txt_align">HTML Templates</a>
                 <i class="fa-solid fa-caret-down margin_r bg_color"></i>
-                <a href class="bg_color txt">More HTML Templates</a>
+                <a href class="bg_color txt txt_align">More HTML Templates</a>
                 <i class="fa-solid fa-caret-down  margin_r bg_color"></i>
-                <div class="button text_align ">DOWNLOAD NOW</div>
+                <div class="button text_align txt_align ">DOWNLOAD NOW</div>
               </div>
             </div>
 
-            <div class="float_right width_r2 padding3">
-              <i class="fa-brands fa-square-youtube margin_r"></i>
-              <i class="fa-brands fa-facebook-f margin_r"></i>
-              <i class="fa-brands fa-google-plus margin_r"></i>
-              <i class="fa-brands fa-linkedin margin_r"></i>
-              <i class="fa-brands fa-pinterest margin_r"></i>
-              <i class="fa-brands fa-instagram margin_r"></i>
+            <div class="float_right width_r2 padding3 nofloat  txt_align">
+              <i class="fa-brands fa-square-youtube margin_r width1"></i>
+              <i class="fa-brands fa-facebook-f margin_r width1"></i>
+              <i class="fa-brands fa-google-plus margin_r width1"></i>
+              <i class="fa-brands fa-linkedin margin_r width1"></i>
+              <i class="fa-brands fa-pinterest margin_r width1"></i>
+              <i class="fa-brands fa-instagram margin_r width1"></i>
               <i class="fa-brands fa-twitter "></i>
             </div>
 
@@ -63,7 +63,7 @@
       </div>
       <div class=" width_b  margin_a">
         <div class="float_left width_l3 margin_r3 nofloat">
-          <div class="margin border bg_color2">
+          <div class="margin border bg_color2 width1 margin1">
             <img src="img_1.jpeg" alt="night laser" height="200px" width="100%">
             <div class="width_c margin_a padding5  ">
               <div class="font_color">10/05/2018 <br></div>
