--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -13,16 +13,15 @@
   <div class="bg_color3 font_f">
     <header class="bg_color1">
       <div class="width_a margin_a">
-        <div class="float_left width_left nofloat">
-          <div>
-            <div class="float_left width_l1 padding nofloat img_align">
-              <img src="img_g.jpeg" alt="Guitar" height="55px" width="130%" class="img_prop">
-            </div>
-            <div class="float_right width_r1 nofloat txt_align">
-              <div class="font_size bg_color padding1 txt_align  ">SoundAMP</div>
-            </div>
-            <div style="clear: both;"></div>
+        <div class="float_left width_left nofloat txt_align">
+
+          <div class="float_left width_l1 padding img_align">
+            <img src="img_g.jpeg" alt="Guitar" height="55px" width="130%" class="">
           </div>
+          <div class="float_right width_r1 ">
+            <div class="font_size bg_color padding1">SoundAMP</div>
+          </div>
+          <div style="clear: both;"></div>
         </div>
         <div class="">
           <div class="float_right width_right nofloat">
