--- a/abinash/bootstrap/boot.html
+++ b/abinash/bootstrap/boot.html
@@ -303,8 +303,8 @@
             </div>
         </div>
     </div>
-    <div class="text_align txt_align">
-        <img src="img4.png" alt="man" width="4%" height="70px">
+    <div class="text_align txt_align ">
+        <img src="img4.png" alt="man" width="4%" height="70px" class="width">
     </div>
     <div class="text_align font_s5 txt_align">Hillary Doe</div>
     <div class="text_align pt-1 txt_align  bold">www.companyname.com</div>
