--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -15,33 +15,33 @@
       <div class="width_a margin_a">
         <div class="float_left width_left nofloat txt_align">
 
-          <div class="float_left width_l1 padding img_align">
-            <img src="img_g.jpeg" alt="Guitar" height="55px" width="130%" class="">
+          <div class="float_left width_l1 padding  width1">
+            <img src="img_g.jpeg" alt="Guitar" height="55px" width="130%"  >
           </div>
-          <div class="float_right width_r1 ">
-            <div class="font_size bg_color padding1">SoundAMP</div>
+          <div class="float_right width_r1 txt_r">
+            <div class="font_size bg_color padding1 ">SoundAMP</div>
           </div>
           <div style="clear: both;"></div>
         </div>
         <div class="">
           <div class="float_right width_right nofloat">
-            <div class="float_left width_l2 padding2 nofloat txt_align ">
+            <div class="float_left width_l2 padding2 nofloat txt_ c ">
               <div class="font" style="text-align: right;">
-                <a href class="bg_color txt txt_align">HTML Templates</a>
+                <a href class="bg_color txt txt_ c width3 ">HTML Templates</a>
                 <i class="fa-solid fa-caret-down margin_r bg_color"></i>
-                <a href class="bg_color txt txt_align">More HTML Templates</a>
+                <a href class="bg_color txt txt_ c width3">More HTML Templates</a>
                 <i class="fa-solid fa-caret-down  margin_r bg_color"></i>
-                <div class="button text_align txt_align ">DOWNLOAD NOW</div>
+                <div class="button text_align txt_ c width3">DOWNLOAD NOW</div>
               </div>
             </div>
 
-            <div class="float_right width_r2 padding3 nofloat  txt_align">
-              <i class="fa-brands fa-square-youtube margin_r width1"></i>
-              <i class="fa-brands fa-facebook-f margin_r width1"></i>
-              <i class="fa-brands fa-google-plus margin_r width1"></i>
-              <i class="fa-brands fa-linkedin margin_r width1"></i>
-              <i class="fa-brands fa-pinterest margin_r width1"></i>
-              <i class="fa-brands fa-instagram margin_r width1"></i>
+            <div class="float_right width_r2 padding3 nofloat  txt_c">
+              <i class="fa-brands fa-square-youtube margin_r width2"></i>
+              <i class="fa-brands fa-facebook-f margin_r width2"></i>
+              <i class="fa-brands fa-google-plus margin_r width2"></i>
+              <i class="fa-brands fa-linkedin margin_r width2"></i>
+              <i class="fa-brands fa-pinterest margin_r width2"></i>
+              <i class="fa-brands fa-instagram margin_r width2"></i>
               <i class="fa-brands fa-twitter "></i>
             </div>
 
@@ -57,12 +57,12 @@
     <div>
       <div class="width_b margin_a">
         <div class="bg_image text_align1 bg_color ">
-          <h1 class="margin_r2 padding7 font_size3">ALL EVENT</h1>
+          <h1 class="margin_r2 padding7 font_size3 ">ALL EVENT</h1>
         </div>
       </div>
       <div class=" width_b  margin_a">
         <div class="float_left width_l3 margin_r3 nofloat">
-          <div class="margin border bg_color2 width1 margin1">
+          <div class="margin border bg_color2 ">
             <img src="img_1.jpeg" alt="night laser" height="200px" width="100%">
             <div class="width_c margin_a padding5  ">
               <div class="font_color">10/05/2018 <br></div>
@@ -70,7 +70,7 @@
               <div class="font_color">#hip-hop #rnb #dance <br></div>
               <div class="padding6 linespacing font_color">We are happy to announce tis
                 special laser show.<br></div>
-              <div class="button1 text_align width_a margin_a margin_2">See more...</div>
+              <div class="button1 text_align  width_a margin_a margin_2">See more...</div>
             </div>
           </div>
         </div>
