--- a/abinash/javascript/index.html
+++ b/abinash/javascript/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div>
-        <h1>Rigistration Form</h1>
+        <h1>Registration Form</h1>
         <form>
             <div>
                 <label>Firstname :</label>
