--- a/abinash/Form JS/register.html
+++ b/abinash/Form JS/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="exr.css">
+    <link rel="stylesheet" href="register.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-    <div class="main-div">
+    <div class="main-div bg-img1">
         <form id="form" name="form">
             <div class="input-feilds">
-                <h3 class="mt-3">Register with us</h3>
+                <h2 class="mt-3 text-center">Register with us</h2>
                 <div class="input margin pt-4">
                     <div class="fs-5">Username</div>
                     <input type="text" name="name" id="name" placeholder="Enter Username">
@@ -40,7 +40,10 @@
                     <span class="error_msg" id="cpswd_error"></span>
                 </div>
                 <div class="input margin py-4">
-                    <button class="fs-5 rounded" type="Submit" value="submit" id="submit">Submit</button>
+                    <button class="fs-5 rounded" type="Submit" value="submit" id="submit">Login</button>
+                </div>
+                <div class="text-center">
+                    <a href="#" style="text-decoration: none;" onclick="window.location='index.html'">Create a new account.</a>
                 </div>
             </div>
         </form>
