--- a/abinash/Form JS/index.html
+++ b/abinash/Form JS/index.html
@@ -44,6 +44,7 @@
                         <div>
                             <input type="number" id="age" name="age">
                         </div>
+                        <span id="age_error"></span>
                     </div>
                     <div class="p-3 fs-5">
                         <label>Date of Birth</label>
@@ -76,8 +77,10 @@
                     <div class="p-3 text-center">
                         <input type="submit" id="submit" value="submit" class="btn btn-danger">
                     </div>
-                    <a href="#" class="p-3" style="text-decoration: none;"
+                    <div class="py-3">
+                        <a href="#"  style="text-decoration: none;"
                         onclick="window.location='register.html'">Already have an account ?Please Login</a>
+                    </div>
                 </form>
             </div>
 
@@ -105,6 +108,7 @@
         var lname = document.getElementById('lname').value;
         var email = document.getElementById('email').value;
         var dob = document.getElementById('dob').value;
+        var age = document.getElementById('age').value;
         var fname_error = document.getElementById('fname_error').value;
         var lname_error = document.getElementById('lname_error').value;
         var email_error = document.getElementById('email_error').value;
@@ -112,32 +116,47 @@
         var isvalid = true;
         if (fname == "") {
             document.getElementById('fname_error').innerHTML = "Enter your firstname";
+            document.getElementById('fname').style.borderColor = 'red';
             isvalid = false;
         }
 
         else {
             document.getElementById('fname_error').innerHTML = "";
+            document.getElementById('fname').style.borderColor ="";
         }
         if (lname == "") {
             document.getElementById('lname_error').innerHTML = "Enter your lastname";
+            document.getElementById('lname').style.borderColor = 'red';
             isvalid = false;
         }
         else {
             document.getElementById('lname_error').innerHTML = "";
+            document.getElementById('lname').style.borderColor = '';
         }
         if (email == "") {
             document.getElementById('email_error').innerHTML = "Enter your email";
+            document.getElementById('email').style.borderColor = 'red';
             isvalid = false;
         }
         else {
             document.getElementById('email_error').innerHTML = "";
+            document.getElementById('email').style.borderColor = '';
         }
         if (dob == "") {
             document.getElementById('dob_error').innerHTML = "Enter your Date of birth";
+            document.getElementById('dob').style.borderColor = 'red';
             isvalid = false;
         }
         else {
             document.getElementById('dob_error').innerHTML = "";
+            document.getElementById('dob').style.borderColor = '';
+        }
+        if (age == "") {
+            document.getElementById('age').style.borderColor = 'red';
+            isvalid = false;
+        }
+        else {
+              document.getElementById('age').style.borderColor = '';
         }
 
     }
